<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_box_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_is_a_secret"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_close_secret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/close_secret"/>

    <Button
        android:id="@+id/btn_close_whole_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_whole_box"/>

</androidx.appcompat.widget.LinearLayoutCompat>