<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.androidnavigationcomponentdemo.BoxFragment">

    <TextView
        android:id="@+id/tv_box_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_in_box"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/go_back" />

    <Button
        android:id="@+id/btn_open_secret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_secret" />

    <Button
        android:id="@+id/btn_generate_bumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="generate number" />


</LinearLayout>